finial commit before production

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -2,4 +2,4 @@
 <p><%= @article.title %></p>
 <h2>Content</h2>
 <p><%= @article.text %></p>
-<p><%= link_to 'Show', article_path(@article) %> | <%= link_to 'edit', edit_article_path(@article) %></p>
+<p id="list_links"><%= link_to 'Show', article_path(@article) %> | <%= link_to 'edit', edit_article_path(@article) %></p>
