--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,17 +14,17 @@
     </div>
   <% end %>
  
-  <p>
+  <p class="acticleTitle">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </p>
  
-  <p>
+  <p class="acticleText">
     <%= f.label :text %><br>
     <%= f.text_area :text %>
   </p>
  
-  <p>
+  <p class="acticleSubmit">
     <%= f.submit %>
   </p>
  
