--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,42 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 10px;
+  font-size: 16px;
+}
+.nav {
+	background-color: #E74C3C;
+	color: white;
+	border-radius: 5px;
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	a {
+		text-decoration: none;
+		color: white;
+	}
+	a:hover {
+		color: blue;
+	}
+}
+.link {
+	a {
+		color: white;
+	}	
+}
+#article_title {
+	width: 300px;
+}
+#article_text {
+	width: 300px;
+	height: 300px;
+}
