--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,21 +1,18 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
- 
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
-
+<div id="show_acticle">
+<h2>Title</h2>
+<p><%= @article.title %></p>
+<h2>Content</h2>
+<p><%= @article.text %></p>
+</div>
 <h2>Comments</h2>
 <%= render @article.comments %>
  
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
  
-<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Edit', edit_article_path(@article), remote: true %> |
 <%= link_to 'Back', articles_path %> |
 <%= link_to 'Delete', article_path(@article),
 	              method: :delete,
 	              data: { confirm: 'Are you sure?' } %>
+<div id="edit_article"></div>	              
