--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <p class="navbar-text pull-right nav">
+    <% if admin_signed_in? %>
+      Logged in as <strong><%= current_admin.email %></strong>.
+    <%= link_to 'Edit profile', edit_admin_registration_path, :class => 'navbar-link' %> |
+    <%= link_to "Logout", destroy_admin_session_path, method: :delete, :class => 'navbar-link'  %>
+    <% else %>
+    <%= link_to "Login", new_admin_session_path, :class => 'navbar-link'  %>
+    <% end %>
+  </p>
+  <% if notice %>
+	<p class="notice"><%= notice %></p>
+  <% end %>
+  <% if alert %>
+	<p class="alert"><%= alert %></p>
+  <% end %>
 
 <%= yield %>
 
