--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Hello, heroku!</h1>
-<p>This is the first app I deployed on Heroku!</p>
+<div class="welcome">
+	<h1>Hello, heroku!</h1>
+	<p>This is the first app I deployed on Heroku!</p>
+	<p>Right now is <%= Time.now.asctime %></p>
+	<p>Login key:</p>
+	<p>Email: test@test.com</p>
+	<p>Password: testing1234</p>
+</div>
+
+<button type="button" class="btn btn-primary link"><%= link_to 'Blog', articles_path %></button>
